feat(agentrazor): refactor
